fix horizontal scroll

--- a/home.css
+++ b/home.css
@@ -237,3 +237,8 @@ footer {
 .offcanvas-title {
   color: black;
 }
+* {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
